# video-app

app/src/main/cpp/: CMakeLists.txt  live.c  live.cpp  live.h
app/src/main/cpp/arm64-v8a/ffmpeg/include/: config.h
app/src/main/cpp/arm64-v8a/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/arm64-v8a/libvidstab/lib/pkgconfig/: vidstab.pc
app/src/main/cpp/arm64-v8a/pkgconfig/: cpufeatures.pc  x265.pc  xvidcore.pc  zlib.pc
app/src/main/cpp/arm64-v8a/x264/lib/pkgconfig/: x264.pc
app/src/main/cpp/arm64-v8a/x265/lib/pkgconfig/: x265.pc
app/src/main/cpp/armeabi-v7a/ffmpeg/include/: config.h
app/src/main/cpp/armeabi-v7a/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/armeabi-v7a/pkgconfig/: vidstab.pc  x265.pc  xvidcore.pc  zlib.pc
app/src/main/cpp/armeabi-v7a/x264/lib/pkgconfig/: x264.pc
app/src/main/cpp/armeabi-v7a/x265/lib/pkgconfig/: x265.pc
app/src/main/cpp/x86/ffmpeg/include/: config.h
app/src/main/cpp/x86/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/x86/libvidstab/lib/pkgconfig/: vidstab.pc
app/src/main/cpp/x86/pkgconfig/: x264.pc  x265.pc  xvidcore.pc  zlib.pc
app/src/main/cpp/x86/x265/lib/pkgconfig/: x265.pc
app/src/main/cpp/x86_64/ffmpeg/include/: config.h
app/src/main/cpp/x86_64/pkgconfig/: x265.pc  xvidcore.pc  zlib.pc
(+40 files in other folders)
